Issues on collapsed fixed

--- a/NewWS/css/style.css
+++ b/NewWS/css/style.css
@@ -360,7 +360,7 @@ body.offcanvas {
     -o-transform: translateX(0);
     transform: translateX(0);
     width: 300px;
-    background: #f2f3f7;
+    /*background: #f2f3f7;*/
     z-index: 999;
     position: fixed; }
   body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
